--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,5 +3,5 @@ main = "worker.js"
 compatibility_date = "2025-06-09"
 
 kv_namespaces = [
-  { binding = "STOCK_KV", id = "<ID_DO_SEU_NAMESPACE_KV>" }
+  { binding = "STOCK_KV", id = "e5c4aa19893e431e8c3c8091287a4ce4" }
 ]
